# teknavo-task

./: CMakeLists.txt  README.md
cmake/: utils.cmake
src/: CMakeLists.txt  se_solver.cpp
src/mt/: CMakeLists.txt  event.hpp  execution_context.hpp  task.hpp  task_queue.cpp  task_queue.hpp  task_queue_impl.hpp
src/mt/test/: CMakeLists.txt  main.cpp  mt.cpp  task_queue.cpp
src/solver/: CMakeLists.txt  execution_manager.cpp  execution_manager.hpp  trey.cpp  trey.hpp
src/solver/test/: CMakeLists.txt  trey_calculation.cpp
